--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,12 +22,12 @@ task(configureApp) {
 }
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "com.trevorhalvorson.portal"
         minSdkVersion 21
-        targetSdkVersion 26
+        targetSdkVersion 28
         versionCode getVersionCode()
         versionName getVersionName()
     }
@@ -41,7 +41,7 @@ android {
             buildConfigField("Boolean", "ALLOW_BROWSING", "$allowBrowsing")
         }
         debug {
-            buildConfigField("String", "URL", '"https://trevorhalvorson.com"')
+            buildConfigField("String", "URL", '"https://www.wikipedia.org/"')
             buildConfigField("Boolean", "ALLOW_BROWSING", "true")
         }
     }
@@ -54,5 +54,5 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
