--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,11 +18,12 @@ def getVersionName = { ->
 
 def props = project.getProperties()
 
-def url, allowBrowsing, toolbarTitle
+def url, allowBrowsing, allowFileUpload, toolbarTitle
 
 task(configureApp) {
     url = props.get("url")
     allowBrowsing = props.get("allowBrowsing")
+    allowFileUpload = props.get("allowFileUpload")
     toolbarTitle = props.get("toolbarTitle")
 }
 
@@ -53,11 +54,13 @@ android {
 
             buildConfigField("String", "URL", "$url")
             buildConfigField("Boolean", "ALLOW_BROWSING", "$allowBrowsing")
+            buildConfigField("Boolean", "ALLOW_FILE_UPLOAD", "$allowFileUpload")
             buildConfigField("String", "TOOLBAR_TITLE", "$toolbarTitle")
         }
         debug {
             buildConfigField("String", "URL", '"https://www.wikipedia.org/"')
             buildConfigField("Boolean", "ALLOW_BROWSING", "true")
+            buildConfigField("Boolean", "ALLOW_FILE_UPLOAD", "false")
             buildConfigField("String", "TOOLBAR_TITLE", '"PORTAL DEBUG"')
         }
     }
