Add config for writing WebView console logs to LogCat

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ def getVersionName = { ->
 
 def props = project.getProperties()
 
-def url, allowBrowsing, allowFileUpload, toolbarTitle
+def url, enableWebViewLogs, allowBrowsing, allowFileUpload, toolbarTitle
 
 task(configureApp) {
     url = props.get("url")
@@ -53,12 +53,14 @@ android {
             signingConfig signingConfigs.release
 
             buildConfigField("String", "URL", "$url")
+            buildConfigField("Boolean", "ENABLE_WEB_VIEW_LOGS", "$enableWebViewLogs")
             buildConfigField("Boolean", "ALLOW_BROWSING", "$allowBrowsing")
             buildConfigField("Boolean", "ALLOW_FILE_UPLOAD", "$allowFileUpload")
             buildConfigField("String", "TOOLBAR_TITLE", "$toolbarTitle")
         }
         debug {
             buildConfigField("String", "URL", '"https://www.wikipedia.org/"')
+            buildConfigField("Boolean", "ENABLE_WEB_VIEW_LOGS", "true")
             buildConfigField("Boolean", "ALLOW_BROWSING", "true")
             buildConfigField("Boolean", "ALLOW_FILE_UPLOAD", "false")
             buildConfigField("String", "TOOLBAR_TITLE", '"PORTAL DEBUG"')
